#3: -implementacion basica lista
Co-authored-by: Xheir <Xheir@users.noreply.github.com>

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-IP =
-PORT =
-BUFFER_SIZE = 1024
+IP = 
+PORT = 
+BUFFER_SIZE = 
 SERVER_KEY = 
 CLIENT_KEY = 
 
@@ -12,4 +12,4 @@ CLIENT_KEY =
 # 1) https://www.allkeysgenerator.com/Random/Security-Encryption-Key-Generator.aspx
 # Crear llave de 256 bits
 # 2) https://www.base64encode.net/
-# Usar sitio para codifica la llave en base64 y guardarla en SERVER_KEY
+# Usar sitio para codificar la llave en base64 y guardarla en SERVER_KEY
