--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,10 @@
 IP = 
 PORT = 
+
+# !!! No es necesario, no se pudo implementar correctamente a tiempo :c
 SERVER_KEY = 
 CLIENT_KEY = 
+
 
 
 # SERVER_KEY necesaria solo al ejecutar el servidor
